packages/svelte/tests/compiler-errors/samples/render-tag-invalid-call/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-render-call',
		message: 'Calling a snippet function using apply, bind or call is not allowed'
	}
});
